syntax = "proto3";
package exa.jetski_cortex_pb;

import "exa/cortex_pb.proto";
import "gemini_coder.proto";
import "google/protobuf/timestamp.proto";

message BackupMessage { bytes data = 1; }

message CascadeState {
  string cascade_id = 1;
  gemini_coder.Trajectory trajectory = 2;
  exa.cortex_pb.CascadeRunStatus status = 3;
  exa.cortex_pb.CascadeRunStatus executable_status = 7;
  exa.cortex_pb.CascadeRunStatus executor_loop_status = 8;
  exa.cortex_pb.ExecutorMetadata executor_metadata = 4;
  repeated gemini_coder.Step queued_steps = 5;
  repeated exa.cortex_pb.ArtifactSnapshot artifact_snapshots = 6;
}

message ImplicitTrajectory {
  gemini_coder.Trajectory trajectory = 1;
  exa.cortex_pb.TrajectoryScope trajectory_scope = 5;
}

message BaseTrajectoryIdentifier {
  oneof identifier {
    string cascade_id = 1;
    string implicit_trajectory_file_uri = 2;
    bool last_active_doc = 3;
    gemini_coder.Trajectory trajectory = 4;
  }
}

message CortexTrajectoryStepWithIndex {
  gemini_coder.Step step = 1;
  uint32 step_index = 2;
}

message ConversationAnnotations {
  string title = 1;
  repeated string tags = 3;
  bool archived = 4;
  google.protobuf.Timestamp archival_status_timestamp = 5;
  bool starred = 6;
  google.protobuf.Timestamp last_user_view_time = 7;
}

message CascadeTrajectorySummary {
  string summary = 1;
  uint32 step_count = 2;
  google.protobuf.Timestamp last_modified_time = 3;
  string trajectory_id = 4;
  exa.cortex_pb.CascadeRunStatus status = 5;
  google.protobuf.Timestamp created_time = 7;
  repeated CortexTrajectoryStepWithIndex waiting_steps = 8;
  repeated exa.cortex_pb.CortexWorkspaceMetadata workspaces = 9;
  google.protobuf.Timestamp last_user_input_time = 10;
  uint32 last_user_input_step_index = 16;
  CortexTrajectoryStepWithIndex latest_notify_user_step = 12;
  CortexTrajectoryStepWithIndex latest_task_boundary_step = 14;
  ConversationAnnotations annotations = 15;
}

message CascadeTrajectorySummaries {
  map<string, CascadeTrajectorySummary> summaries = 1;
}
